--- a/NYSL-app.css
+++ b/NYSL-app.css
@@ -42,6 +42,8 @@
 .field {
     text-shadow: 2px 2px 4px whitesmoke;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 
@@ -110,6 +112,7 @@ div.btn-container a {
 #back-and-home-btn a {
     width: 30%;
     height: auto;
+    font-weight: bold;
 }
 
 #upcoming-game {
@@ -134,4 +137,24 @@ div.btn-container a {
 
 .table {
     text-shadow: 2px 2px 4px whitesmoke;
+}
+
+.location {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.mapouter {
+    position: relative;
+    text-align: right;
+    height: 400px;
+    width: 400px;
+}
+
+.gmap_canvas {
+    overflow: hidden;
+    background: none !important;
+    height: 400px;
+    width: 400px;
 }
