--- a/NYSL-app.css
+++ b/NYSL-app.css
@@ -110,7 +110,7 @@ div.btn-container a {
 }
 
 #back-and-home-btn a {
-    width: 30%;
+    width: auto;
     height: auto;
     font-weight: bold;
 }
@@ -122,6 +122,22 @@ div.btn-container a {
     height: 20%;
     margin-left: 25%;
     text-shadow: 2px 2px 4px whitesmoke;
+}
+
+#game-over {
+    margin-top: 300px;
+    font-weight: bold;
+    border: 2px solid black;
+    text-shadow: 1px 1px whitesmoke;
+    color: black;
+    opacity: 0.8;
+}
+
+.game-over {
+    display: flex;
+    justify-content: center;
+    text-shadow: 1px 1px whitesmoke;
+    opacity: 0.7;
 }
 
 .about {
@@ -157,4 +173,14 @@ div.btn-container a {
     background: none !important;
     height: 400px;
     width: 400px;
+}
+
+.input {
+    width: 50px;
+    height: 50px;
+}
+
+.end-result {
+    display: flex;
+    justify-content: space-around;
 }
