--- a/NYSL-app.css
+++ b/NYSL-app.css
@@ -1,4 +1,13 @@
-#background-portrait {
+.background-img {
+    display: block;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+}
+
+.background-img-landscape {
+    display: none;
     position: fixed;
     height: 100%;
     width: 100%;
@@ -196,10 +205,6 @@ div.btn-container a {
     text-decoration: line-through;
 }
 
-/* .background-img-portrait {
-    
-} */
-
 #background-portrait {
     display: none;
     position: fixed;
@@ -209,27 +214,69 @@ div.btn-container a {
 }
 
 #backgound-landscape {
-    display: inline-block;
+    display: block;
     position: fixed;
     width: 100%;
-    height: 400px;
+    height: 100%;
     z-index: -1;
 }
 
-
-/* @media screen and (min-device-width:320px) and (max-device-width:480px) {} */
-
 /* Portrait */
 @media screen and (orientation: portrait) {
-    #background-portrait {
-        position: fixed;
+    body {
         height: 100%;
         width: 100%;
-        z-index: -1;
+    }
+
+    #gmap_canvas {
+        height: 400px;
+        width: 400px;
     }
 }
 
 /* landscape */
 @media screen and (orientation: landscape) {
-    #backgound-landscape {}
+    body {}
+
+    .background-img {
+        display: none;
+    }
+
+    .background-img-landscape {
+        display: block;
+    }
+
+    .mapouter {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        text-align: right;
+        height: 400px;
+        width: 100%;
+    }
+
+    #gmap_canvas {
+        height: 400px;
+        width: 100%;
+    }
+
+    .result-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+}
+
+
+
+.team-score {
+    font-size: 2em;
+}
+
+.result-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 }
