--- a/public/NYSL-app.css
+++ b/public/NYSL-app.css
@@ -280,3 +280,65 @@ div.btn-container a {
     align-items: center;
     justify-content: space-evenly;
 }
+
+.chat {
+    height: 350px;
+}
+
+#posts {
+    height: 350px;
+    width: 400px;
+    overflow: scroll;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.message {
+    border: 1px solid black;
+    padding: 5px;
+    margin: 5px;
+    background-color: lightgoldenrodyellow;
+    border-radius: 10px;
+    opacity: 0.8;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+#logout {
+    display: none;
+}
+
+#login {
+    display: block;
+}
+
+#notLoggedIn {
+    display: none;
+}
+
+.message {
+    display: block;
+    border: 1px solid black;
+    padding: 5px;
+    margin: 5px;
+    background-color: lightgoldenrodyellow;
+    border-radius: 10px;
+    opacity: 0.8;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.advice {
+    height: 100vh;
+    width: 400px;
+    position: sticky;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: grey;
+    color: white;
+    opacity: .7;
+    border-radius: 10px;
+    z-index: 100;
+}
