--- a/public/NYSL-app.css
+++ b/public/NYSL-app.css
@@ -282,7 +282,13 @@ div.btn-container a {
 }
 
 .chat {
-    height: 350px;
+    height: 85vh;
+    /* height: 350px; */
+    width: 400px;
+    overflow: scroll;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 #posts {
@@ -304,13 +310,13 @@ div.btn-container a {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-#logout {
+/* #logout {
     display: none;
 }
 
 #login {
     display: block;
-}
+} */
 
 #notLoggedIn {
     display: none;
@@ -327,7 +333,7 @@ div.btn-container a {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.advice {
+/* .advice {
     height: 100vh;
     width: 400px;
     position: sticky;
@@ -341,4 +347,30 @@ div.btn-container a {
     opacity: .7;
     border-radius: 10px;
     z-index: 100;
+} */
+
+
+
+.notification:not(:last-child) {
+    margin-bottom: .3rem;
+}
+
+.notification.is-info {
+    text-align: right;
+    max-width: 80%;
+    align-self: flex-end;
+    border-radius: 20px;
+}
+
+.notification.is-primary {
+    text-align: left;
+    max-width: 80%;
+    align-self: flex-start;
+    border-radius: 20px;
+}
+
+.scroll {
+    width: 400px;
+    max-height: 300px;
+    overflow: scroll;
 }
