--- a/public/NYSL-app.css
+++ b/public/NYSL-app.css
@@ -236,7 +236,6 @@ div.btn-container a {
 
 /* landscape */
 @media screen and (orientation: landscape) {
-    body {}
 
     .background-img {
         display: none;
@@ -371,6 +370,8 @@ div.btn-container a {
 
 .scroll {
     width: 400px;
-    max-height: 300px;
-    overflow: scroll;
+    /* max-height: 150px; */
+    overflow: auto;
+    /* height: 85vh; */
+    overflow-y: scroll;
 }
