--- a/public/NYSL-app.css
+++ b/public/NYSL-app.css
@@ -105,7 +105,7 @@
         display: flex;
         justify-content: center;
         height: auto;
-        margin-bottom: 10%;
+        /* margin-bottom: 10%; */
     }
 
     .home-btn a {
@@ -115,7 +115,7 @@
     #back-and-home-btn {
         display: flex;
         justify-content: space-around;
-        margin-bottom: 10%;
+        /* margin-bottom: 10%; */
     }
 
     #back-and-home-btn a {
@@ -150,13 +150,22 @@
     }
 
     .about {
+        height: 72.5vh;
+        overflow: scroll;
         opacity: 1;
         text-shadow: 1px 1px 3px whitesmoke;
         color: black;
     }
 
     .table {
+        height: 70vh;
+        overflow: scroll;
         text-shadow: 2px 2px 4px whitesmoke;
+    }
+
+    .link {
+        color: darkblue;
+        text-shadow: none;
     }
 
     .location {
@@ -214,7 +223,7 @@
     /* Portrait */
     @media screen and (orientation: portrait) {
         body {
-            height: 100%;
+            height: 85vh;
             width: 100%;
         }
 
@@ -250,6 +259,8 @@
         }
 
         .result-container {
+            height: 70vh;
+            overflow: scroll;
             display: flex;
             flex-direction: row;
             justify-content: space-evenly;
@@ -261,6 +272,8 @@
     }
 
     .result-container {
+        height: 70vh;
+        overflow: scroll;
         display: flex;
         flex-wrap: wrap;
         flex-direction: column;
@@ -269,7 +282,7 @@
     }
 
     .chat {
-        height: 85vh;
+        height: 75vh;
         max-width: 500;
         width: 100vw;
         overflow: scroll;
@@ -334,7 +347,7 @@
         padding: 10px;
         border: 1.2px solid black;
         margin-top: 10px;
-        background-color: blue;
+        background-color: #6666ff;
     }
 
     .myMessage {
@@ -356,4 +369,14 @@
     .card-footer {
         padding: 0;
         background-color: transparent;
+    }
+
+    #more {
+        display: none;
+    }
+
+    #myBtn {
+        display: flex;
+        justify-content: center;
+        align-content: center;
     }
