--- a/public/NYSL-app.css
+++ b/public/NYSL-app.css
@@ -101,11 +101,19 @@
         font-weight: bold;
     }
 
+    .save {
+        text-shadow: 1px 1px whitesmoke;
+        color: black;
+        opacity: 0.7;
+        height: 40px;
+        font-weight: bold;
+        margin-top: 5%;
+    }
+
     .home-btn {
         display: flex;
         justify-content: center;
         height: auto;
-        /* margin-bottom: 10%; */
     }
 
     .home-btn a {
@@ -114,14 +122,21 @@
 
     #back-and-home-btn {
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-around;
-        /* margin-bottom: 10%; */
+        align-content: center;
+        margin-top: 2%;
     }
 
     #back-and-home-btn a {
         width: auto;
         height: auto;
         font-weight: bold;
+    }
+
+    .nextgame {
+        display: flex;
+        justify-content: space-evenly;
     }
 
     #upcoming-game {
